# flask-webpage-analyzer

./: .gitignore  LICENSE  Makefile  README.md  babel.cfg  database.sql  pyproject.toml  secret.env  setup.cfg  setup.sh
.github/workflows/: hexlet-check.yml  pyci.yml
page_analyzer/: app.py  database_requests.py  utils.py
page_analyzer/templates/: 404.html  base.html  index.html  show.html  show_all.html
translations/ru/LC_MESSAGES/: messages.mo  messages.po
